# wa_link_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/wa_link_bot/: __init__.py  bot.py  phone.py
tests/: test_bot_config.py  test_phone.py
