[project]
name = "telegram-whatsapp-link-bot"
version = "0.1.0"
description = "Telegram bot that turns free-form phone numbers into WhatsApp direct links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
wa-link-bot = "wa_link_bot.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_link_bot"]
